--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11.11"
 dependencies = [
     "datasets>=4.0.0",
     "evaluate>=0.4.5",
+    "gradio>=5.38.0",
     "pillow>=11.3.0",
     "safetensors>=0.5.3",
     "scikit-learn>=1.7.0",
