--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10.17"
 dependencies = [
     "datasets>=4.0.0",
     "evaluate>=0.4.5",
+    "grad-cam",
     "gradio>=5.38.0",
     "pillow>=11.3.0",
     "safetensors>=0.5.3",
@@ -60,3 +61,6 @@ build-backend = "setuptools.build_meta"
 where = ["."]
 include = ["skincancer_vit"]
 exclude = ["results*"]
+
+[tool.uv.sources]
+grad-cam = { git = "https://github.com/jacobgil/pytorch-grad-cam.git" }
