--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "evaluate>=0.4.5",
     "grad-cam",
     "gradio>=5.38.0",
+    "imageio>=2.37.0",
     "pillow>=11.3.0",
     "safetensors>=0.5.3",
     "scikit-learn>=1.7.0",
