--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "grad-cam",
     "gradio>=5.38.0",
     "imageio>=2.37.0",
+    "opencv-python-headless>=4.12.0.88",
     "pillow>=11.3.0",
     "safetensors>=0.5.3",
     "scikit-learn>=1.7.0",
