--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.10.17"
 dependencies = [
     "datasets>=4.0.0",
     "evaluate>=0.4.5",
+    "flask>=3.0.0",
+    "flask-cors>=4.0.0",
     "grad-cam",
     "gradio>=5.38.0",
     "imageio>=2.37.0",
